--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
             <button id="jsSave">Save</button>
         </div>
         <div class= "controls_colors" id="jsColors">
-            <div class="controls_color" style="background-color:#2c2c2c"></div>
-            <div class="controls_color" style="background-color:white"></div>
-            <div class="controls_color" style="background-color:red"></div>
-            <div class="controls_color" style="background-color:#ff9500"></div>
-            <div class="controls_color" style="background-color:#ffcc00"></div>
-            <div class="controls_color" style="background-color:#4cd963"></div>
-            <div class="controls_color" style="background-color:#5ac8fa"></div>
-            <div class="controls_color" style="background-color:#0579ff"></div>
-            <div class="controls_color" style="background-color:#5856d6"></div>
+            <div class="controls_color jsColor" style="background-color:#2c2c2c"></div>
+            <div class="controls_color jsColor" style="background-color:white"></div>
+            <div class="controls_color jsColor" style="background-color:red"></div>
+            <div class="controls_color jsColor" style="background-color:#ff9500"></div>
+            <div class="controls_color jsColor" style="background-color:#ffcc00"></div>
+            <div class="controls_color jsColor" style="background-color:#4cd963"></div>
+            <div class="controls_color jsColor" style="background-color:#5ac8fa"></div>
+            <div class="controls_color jsColor" style="background-color:#0579ff"></div>
+            <div class="controls_color jsColor" style="background-color:#5856d6"></div>
         </div>
     </div>
     <script src="src/app.js"></script>
