--- a/index.html
+++ b/index.html
@@ -8,15 +8,20 @@
     <title>PaintJS</title>
 </head>
 <body>
-    <canvas id="jsCanvas" class="canvas"></canvas>
-    <div class="controls">
-        <div class="controls_range">
-            <input type="range" id="jsRange" min="0.1" max="5.0" value="2.5" step="0.1" />
+    <div class="canvasCenter">
+        <canvas id="jsCanvas" class="canvas"></canvas>
+        <div class="controls">
+            <div class="controls_range">
+                <input type="range" id="jsRange" min="0.1" max="5.0" value="2.5" step="0.1" />
+            </div>
+            <div class="controls_btns">
+                <button id="jsMode">Fill</button>
+                <button id="jsSave">Save</button>
+            </div>
+            
         </div>
-        <div class="controls_btns">
-            <button id="jsMode">Fill</button>
-            <button id="jsSave">Save</button>
-        </div>
+    </div>
+    <div class= "color_s">
         <div class= "controls_colors" id="jsColors">
             <div class="controls_color jsColor" style="background-color:#2c2c2c"></div>
             <div class="controls_color jsColor" style="background-color:white"></div>
@@ -27,6 +32,12 @@
             <div class="controls_color jsColor" style="background-color:#5ac8fa"></div>
             <div class="controls_color jsColor" style="background-color:#0579ff"></div>
             <div class="controls_color jsColor" style="background-color:#5856d6"></div>
+        </div>
+
+        <div class="controls_btns">
+            <button id="jsFree">Free..</button>
+            <button id="jsRect">RECT</button>
+            <button id="jsCircle">CIRCLE</button>
         </div>
     </div>
     <script src="src/app.js"></script>
